# fastApiGraphQLTemplate

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  test_main.http
core/model/: __init__.py  database.py  models.py
core/model/managers/: resolvers.py
core/schemas/: schemas.py
graphql_server/: core.py
